# hyperreasoning

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
agents/: AGENTS.md  PLANS.md  RUNBOOK.md
artifacts/: __init__.py  io.py  records.py
backend/: __init__.py  api.py  config.py  jobs.py  models.py  run_cache.py  search_graph.py  service.py
data/: datasets.py  replay_dataset.py  task_manifest.py  task_store.py
data/references/: README.md
data/splits/: README.md  eval_10.txt  train_90.txt
data/task_templates/: __init__.py  base.py  registry.py  utils.py  writer.py
demo/: README.md
demo/pycharm_eval_ast_transform_scope_bug_2058/: README.md  task.json  test_visible.py  transform.py
demo/pycharm_eval_cache_invalidation_dependency_2073/: README.md  cache.py  task.json  test_visible.py
demo/pycharm_eval_multi_file_interface_drift_4025/: README.md  api.py  task.json  test_visible.py
demo/pycharm_eval_stateful_iterator_resume_bug_1080/: README.md  task.json  test_visible.py
docs/: DEMO_RUNBOOK.md  SEARCH_GRAPH_EVENTS.md  normalized_results.csv  paired_deltas.csv  raw_eval_results.jsonl  summary_metrics.csv
env/: __init__.py  dsl_env.py  dsl_schema.py  heuristics.py  rewards.py  state_encoder.py  verifier.py
jetbrains-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
llm/: compiler.py  llm_client.py  parsing.py  prompt_utils.py  proposal.py  repair.py
models/: embedding.py  q_network.py
rl/: categorical.py  priorities.py  rainbow.py  replay_buffer.py
scripts/: README.md  run_eval.py
(+74 files in other folders)
